--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -9,10 +9,10 @@
   {% dnd_area "dnd_area" class='body-container body-container__homepage', label='Main section' %}
 
     {# Banner Section #}
-    {% dnd_section max_width=700,
+    {% dnd_section max_width=760,
       padding={
-        'top': 120,
-        'bottom': 300,
+        'top': 140,
+        'bottom': 280,
         'left': 20,
         'right': 20
       },
@@ -24,17 +24,10 @@
       vertical_alignment='MIDDLE'
     %}
       {% dnd_column %}
-        {% dnd_row
-          padding={
-            'top': 0,
-            'bottom': 0,
-            'left': 0,
-            'right': 0
-          }
-        %}
+        {% dnd_row %}
           {% dnd_module path='@hubspot/rich_text', flexbox_positioning="TOP_CENTER" %}
           {% module_attribute "label" %}Rich text{% end_module_attribute %}
-          {% module_attribute "html"%}
+          {% module_attribute "html" %}
             <div style="text-align: center">
               <h1>Perfect Saves Time.</h1>
               <p>Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>
@@ -44,8 +37,8 @@
         {% end_dnd_row %}
         {% dnd_row %}
           {% dnd_module path='../modules/Customizable button', flexbox_positioning='MIDDLE_CENTER' %}
-            {% module_attribute "label"%}Button{% end_module_attribute %}
-            {% module_attribute "link"%}#{% end_module_attribute %}
+            {% module_attribute "label" %}Button{% end_module_attribute %}
+            {% module_attribute "link" %}#{% end_module_attribute %}
             {% module_attribute "button_text" %}Free Trial{% end_module_attribute %}
           {% end_dnd_module %}
         {% end_dnd_row %}
@@ -191,30 +184,179 @@
 
 
     {# Testimonial Section #}
-    {% dnd_section %}
+    {% dnd_section
+      padding={
+        'top': 120,
+        'bottom': 300,
+        'left': 20,
+        'right': 20
+      },
+      background_image={
+        'backgroundPosition': 'MIDDLE_CENTER',
+        'backgroundSize': 'cover',
+        'imageUrl': 'https://cdn2.hubspotqa.net/hubfs/101400067/Sass%20Theme/TestimonialsBanner.png'
+      } 
+    %}
       {% dnd_column %}
         {% dnd_row %}
-          {# Header #}
+          {% dnd_module path='@hubspot/header', flexbox_positioning='MIDDLE_CENTER'  %}
+          {% module_attribute "label" %}Header{% end_module_attribute %}
+          {% module_attribute "header_tag"%}h2{% end_module_attribute %}
+          {% module_attribute "value"%}Headlines and Mission Statements for Days{% end_module_attribute %}
+        {% end_dnd_module %}
         {% end_dnd_row %}
         {% dnd_row %}
-          {# Testimonials#}
+          {% dnd_module 
+            path='../modules/Testimonial',
+            offset=0,
+            width=4,
+            flexbox_positioning='MIDDLE_CENTER' 
+          %}
+            {% module_attribute "label"%}Testimonial{% end_module_attribute %}
+          {% end_dnd_module %}
+          {% dnd_module 
+            path='../modules/Testimonial',
+            offset=4,
+            width=4,
+            flexbox_positioning='MIDDLE_CENTER' 
+          %}
+            {% module_attribute "label"%}Testimonial{% end_module_attribute %}
+          {% end_dnd_module %}
+          {% dnd_module 
+            path='../modules/Testimonial',
+            offset=8,
+            width=4,
+            flexbox_positioning='MIDDLE_CENTER' 
+          %}
+            {% module_attribute "label"%}Testimonial{% end_module_attribute %}
+          {% end_dnd_module %}
         {% end_dnd_row %}
       {% end_dnd_column %}
     {% end_dnd_section %}
 
     {# Logo Section #}
     {% dnd_section %}
-      {# Linked Image #}
-      {# Linked Image #}
-      {# Linked Image #}
-      {# Linked Image #}
-      {# Linked Image #}
-      {# Linked Image #}
+      {% dnd_module 
+        path='@hubspot/linked_image',
+        offset=0,
+        width=2
+      %}
+      {% module_attribute "label" %}Image{% end_module_attribute %}
+      {% module_attribute "img" is_json=True %}
+        {
+          "src": "https://cdn2.hubspot.net/hubfs/6326501/boilerplate/grayscale-mountain.png",
+          "width": "550",
+          "alt": "Sample Image",
+          "size_type": "auto"
+        }
+      {% end_module_attribute %}
+      {% end_dnd_module %}
+      {% dnd_module 
+        path='@hubspot/linked_image',
+        offset=2,
+        width=2
+      %}
+      {% module_attribute "label" %}Image{% end_module_attribute %}
+      {% module_attribute "img" is_json=True %}
+        {
+          "src": "https://cdn2.hubspot.net/hubfs/6326501/boilerplate/grayscale-mountain.png",
+          "width": "550",
+          "alt": "Sample Image",
+          "size_type": "auto"
+        }
+      {% end_module_attribute %}
+      {% end_dnd_module %}
+      {% dnd_module 
+        path='@hubspot/linked_image',
+        offset=4,
+        width=2
+      %}
+      {% module_attribute "label" %}Image{% end_module_attribute %}
+      {% module_attribute "img" is_json=True %}
+        {
+          "src": "https://cdn2.hubspot.net/hubfs/6326501/boilerplate/grayscale-mountain.png",
+          "width": "550",
+          "alt": "Sample Image",
+          "size_type": "auto"
+        }
+      {% end_module_attribute %}
+      {% end_dnd_module %}
+      {% dnd_module 
+        path='@hubspot/linked_image',
+        offset=6,
+        width=2
+      %}
+      {% module_attribute "label" %}Image{% end_module_attribute %}
+      {% module_attribute "img" is_json=True %}
+        {
+          "src": "https://cdn2.hubspot.net/hubfs/6326501/boilerplate/grayscale-mountain.png",
+          "width": "550",
+          "alt": "Sample Image",
+          "size_type": "auto"
+        }
+      {% end_module_attribute %}
+      {% end_dnd_module %}
+      {% dnd_module 
+        path='@hubspot/linked_image',
+        offset=8,
+        width=2
+      %}
+      {% module_attribute "label" %}Image{% end_module_attribute %}
+      {% module_attribute "img" is_json=True %}
+        {
+          "src": "https://cdn2.hubspot.net/hubfs/6326501/boilerplate/grayscale-mountain.png",
+          "width": "550",
+          "alt": "Sample Image",
+          "size_type": "auto"
+        }
+      {% end_module_attribute %}
+      {% end_dnd_module %}
+      {% dnd_module 
+        path='@hubspot/linked_image',
+        offset=10,
+        width=2
+      %}
+      {% module_attribute "label" %}Image{% end_module_attribute %}
+      {% module_attribute "img" is_json=True %}
+        {
+          "src": "https://cdn2.hubspot.net/hubfs/6326501/boilerplate/grayscale-mountain.png",
+          "width": "550",
+          "alt": "Sample Image",
+          "size_type": "auto"
+        }
+      {% end_module_attribute %}
+      {% end_dnd_module %}
     {% end_dnd_section %}
-
+    
     {# Call to Action Section #}
-    {% dnd_section %}
-      {# Rich Text #}
+    {% dnd_section
+      background_color={
+        r: 52,
+        g: 181,
+        b: 229,
+        a: 1.0 
+      }
+    %}
+      {% dnd_column %}
+        {% dnd_row %}
+          {% dnd_module path='@hubspot/rich_text', flexbox_positioning="TOP_CENTER" %}
+          {% module_attribute "label" %}Rich text{% end_module_attribute %}
+          {% module_attribute "html" %}
+            <div style="text-align: center">
+              <h2>Easy and Simple to Use for All Levels.</h2>
+              <p>Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>
+            </div>
+          {% end_module_attribute %}
+          {% end_dnd_module %}
+        {% end_dnd_row %}
+        {% dnd_row %}
+          {% dnd_module path='../modules/Customizable button', flexbox_positioning='MIDDLE_CENTER' %}
+            {% module_attribute "label"%}Button{% end_module_attribute %}
+            {% module_attribute "link"%}#{% end_module_attribute %}
+            {% module_attribute "button_text" %}Free Trial{% end_module_attribute %}
+          {% end_dnd_module %}
+        {% end_dnd_row %}
+      {% end_dnd_column %}
     {% end_dnd_section %}
 
   {% end_dnd_area %}
