--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -38,17 +38,16 @@
       {% end_dnd_column %}
     {% end_dnd_section %}
 
-    {# Top Section #}
-    {% dnd_section %}
+    {# About Section #}
+    {% dnd_section
+      max_width=760
+    %}
         {% dnd_column %}
             {% dnd_row %}
                 {% dnd_module path="@hubspot/rich_text" %}
                     {% module_attribute "html" %}
-                    <div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut scelerisque est eros, quis tincidunt nulla ultrices a. Nulla auctor lacus vitae quam facilisis efficitur. Duis sit amet feugiat lacus. Ut varius ipsum quis egestas mattis.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut scelerisque est eros, quis tincidunt nulla ultrices a. Nulla auctor lacus vitae quam facilisis efficitur. Duis sit amet feugiat lacus. Ut varius ipsum quis egestas mattis.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut scelerisque est eros, quis tincidunt nulla ultrices a. Nulla auctor lacus vitae quam facilisis efficitur. Duis sit amet feugiat lacus. Ut varius ipsum quis egestas mattis.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut scelerisque est eros, quis tincidunt nulla ultrices a. Nulla auctor lacus vitae quam facilisis efficitur. Duis sit amet feugiat lacus. Ut varius ipsum quis egestas mattis.</p>
+                    <div style="text-align: center;">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tellus diam, dignissim non scelerisque eu, lobortis nec tellus. Suspendisse sed felis cursus, maximus metus at, pellentesque elit. Curabitur vel urna malesuada elit luctus volutpat. Etiam varius massa a ante vehicula gravida. Sed bibendum lacinia arcu. Duis quis velit ut lorem elementum tincidunt ut ut lacus. In pharetra eu felis eget pulvinar. Nullam fringilla felis at lectus posuere tempus.</p>
                     </div>
                     {% end_module_attribute %}
                 {% end_dnd_module %}
@@ -56,7 +55,7 @@
         {% end_dnd_column %}
     {% end_dnd_section %}
 
-    {# Two Column With Image Left Section #}
+    {# Our Mission Section #}
       {% dnd_section
         background_color={
           r: 52,
@@ -72,7 +71,7 @@
           {% dnd_row %}
             {% dnd_module path="@hubspot/linked_image",
               img={
-                "src": get_asset_url("../images/computer.png"),
+                "src": get_asset_url("../images/our-mission.jpg"),
                 "alt": "Computer and phone",
                 "size_type": "auto"
               }
@@ -88,54 +87,100 @@
             {% dnd_module path="@hubspot/rich_text" %}
               {% module_attribute "html" %}
                 <div>
-                  <h2 style="color: #fff;">Full Control</h2>
-                  <p style="color: #fff;">Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>
-                  <ul style="color: #fff;">
-                    <li>Something awesome here</li>
-                    <li>Something awesome here</li>
-                    <li>Something awesome here</li>
-                  </ul>
+                  <h2 style="color: #fff;">Our Mission</h2>
+                  <p style="color: #fff;">Nunc ornare scelerisque mi et aliquet. Fusce in elit pharetra metus hendrerit maximus. Phasellus euismod felis ac orci egestas sodales. Vestibulum est dui, mattis sit amet faucibus ac, laoreet faucibus turpis. Sed semper mattis turpis, sit amet semper lorem lobortis eu. Vestibulum tempus id ligula a mollis. In dolor nulla, sodales et felis faucibus, fermentum ullamcorper lectus.</p>
                 </div>
               {% end_module_attribute %}
             {% end_dnd_module %}
           {% end_dnd_row %}
+        {% end_dnd_column %}
+      {% end_dnd_section %}
+
+    {# Our Values Section #}
+      {% dnd_section %}
+        {% dnd_column
+          offset=0,
+          width=6
+        %}
           {% dnd_row %}
-            {% dnd_module
-              path="../modules/Customizable Button",
-              flexbox_positioning="MIDDLE_LEFT",
-              link="#",
-              button_text="Free Trial"
+            {% dnd_module path="@hubspot/rich_text" %}
+              {% module_attribute "html" %}
+                <div>
+                  <h2>Our Values</h2>
+                  <p>Suspendisse non porttitor lacus. Curabitur vitae tempor urna. Nulla a efficitur felis. Vivamus convallis commodo sapien ut dapibus. In vulputate mauris at metus commodo, et ullamcorper ipsum hendrerit. Integer rhoncus interdum felis at luctus. Fusce ipsum augue, sollicitudin vitae pulvinar eget, vestibulum sit amet ex. Vestibulum non dictum lectus, id laoreet quam. Aliquam malesuada luctus ullamcorper. Etiam faucibus vel nulla non maximus. Etiam aliquet luctus tellus. Cras dictum facilisis turpis ac aliquam. Quisque et odio id arcu lobortis pulvinar et non nulla.</p>
+                </div>
+              {% end_module_attribute %}
+            {% end_dnd_module %}
+          {% end_dnd_row %}
+        {% end_dnd_column %}
+        {% dnd_column
+          offset=6,
+          width=6
+        %}
+          {% dnd_row %}
+            {% dnd_module path="@hubspot/linked_image",
+              img={
+                "src": get_asset_url("../images/our-values.jpg"),
+                "alt": "Computer and phone",
+                "size_type": "auto"
+              }
             %}
             {% end_dnd_module %}
           {% end_dnd_row %}
         {% end_dnd_column %}
       {% end_dnd_section %}
 
-    {# Bottom Section #}
+    {# Our Story Section #}
+      {% dnd_section
+        background_color={
+          r: 52,
+          g: 181,
+          b: 229,
+          a: 1.0
+        }
+      %}
+        {% dnd_column
+          offset=0,
+          width=6
+        %}
+          {% dnd_row %}
+            {% dnd_module path="@hubspot/linked_image",
+              img={
+                "src": get_asset_url("../images/our-story.jpg"),
+                "alt": "Computer and phone",
+                "size_type": "auto"
+              }
+            %}
+            {% end_dnd_module %}
+          {% end_dnd_row %}
+        {% end_dnd_column %}
+        {% dnd_column
+          offset=6,
+          width=6
+        %}
+          {% dnd_row %}
+            {% dnd_module path="@hubspot/rich_text" %}
+              {% module_attribute "html" %}
+                <div>
+                  <h2 style="color: #fff;">Our Story</h2>
+                  <p style="color: #fff;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pulvinar pretium ipsum in venenatis. Morbi at rutrum est. Aenean tristique euismod egestas. Nullam tristique turpis vitae velit accumsan, a sagittis ex pulvinar. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec quis gravida magna. Etiam at risus quam. Pellentesque pellentesque felis sed ligula congue, id consequat leo blandit. Integer dignissim laoreet vulputate. Morbi non tortor vel lorem consequat volutpat. Nunc dui dui, rhoncus ut libero ac, sagittis sodales lacus. In eu diam sit amet sapien imperdiet suscipit. Etiam in euismod metus. Nulla felis justo, efficitur varius massa non, sodales aliquet neque.</p>
+                </div>
+              {% end_module_attribute %}
+            {% end_dnd_module %}
+          {% end_dnd_row %}
+        {% end_dnd_column %}
+      {% end_dnd_section %}
+
+    {# Meet the Team Section #}
     {% dnd_section %}
       {% dnd_column %}
         {% dnd_row %}
           {% dnd_module
-            path="@hubspot/rich_text",
-            offset=0,
-            width=4
+            path="@hubspot/rich_text"
           %}
             {% module_attribute "html" %}
               <div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut scelerisque est eros, quis tincidunt nulla ultrices a. Nulla auctor lacus vitae quam facilisis efficitur. Duis sit amet feugiat lacus. Ut varius ipsum quis egestas mattis.</p>
-                <p>Sed sollicitudin, orci non faucibus porta, lectus nisi tristique enim, nec commodo nisi massa non magna. Etiam condimentum mi et neque luctus vestibulum. Maecenas facilisis efficitur semper.</p>
-              </div>
-            {% end_module_attribute %}
-          {% end_dnd_module %}
-          {% dnd_module
-            path="@hubspot/rich_text",
-            offset=4,
-            width=8
-          %}
-            {% module_attribute "html" %}
-              <div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut scelerisque est eros, quis tincidunt nulla ultrices a. Nulla auctor lacus vitae quam facilisis efficitur. Duis sit amet feugiat lacus. Ut varius ipsum quis egestas mattis. Sed sollicitudin, orci non faucibus porta, lectus nisi tristique enim, nec commodo nisi massa non magna. Etiam condimentum mi et neque luctus vestibulum. Maecenas facilisis efficitur semper.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut scelerisque est eros, quis tincidunt nulla ultrices a. Nulla auctor lacus vitae quam facilisis efficitur. Duis sit amet feugiat lacus. Ut varius ipsum quis egestas mattis. Sed sollicitudin, orci non faucibus porta, lectus nisi tristique enim, nec commodo nisi massa non magna. Etiam condimentum mi et neque luctus vestibulum. Maecenas facilisis efficitur semper.</p>
+                <h2 style="text-align: center;">Meet Our Team</h2>
               </div>
             {% end_module_attribute %}
           {% end_dnd_module %}
